# pubmed-papers-fetch

./: README.md  output.csv  pyproject.toml
src/get_papers_list/: get_papers.py
